Bug 1602366 - Don't try to close if we're already discarded. r=mccr8 a=jcristau

Depends on D56820

Differential Revision: https://phabricator.services.mozilla.com/D56821